--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
+  },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.5",
     "typescript": "^4.7.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.36",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   }
 }
