--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
   },
   "dependencies": {
+    "@typegoose/typegoose": "^9.8.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
