--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
       "rootDir": "src",
       "strict": true,
       "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "emitDecoratorMetadata": true
     },
     "include": ["src/**/*"],
     "exclude": ["src/types/*.ts", "node_modules", ".vscode"]
